# padoc-rs

./: .gitignore  Cargo.toml  EXPERIMENTS.md  HANDOFF.md  README.md  TODO_EXPERIMENTS.md  analyze_v6_llama_baselines.tsv  analyze_v6_small.tsv
examples/: inspect_artifact.rs  load_breakdown.rs  normalize_int_ts.rs  roundtrip_minimal.rs  serialize_bench.rs
results/main/: inspect_llama.txt  inspect_small.txt
results/remaining/: ablation_analyze.tsv  ablation_compress.md  ablation_storage_from_artifacts.tsv  analysis_profile_padoc.jsonl  analysis_profile_padoc.tsv  compress_scalability.md  compress_scalability_full.md  core_kernel_link_ablation.tsv  core_kernel_link_coverage.tsv  core_layer_analysis.tsv  gpu_scalability.md  leworldmodel_padoc_5tasks.tsv  on_disk_breakdown.txt  padoc_5task_analysis.tsv  paper_results_summary.md  synthetic_scalability.md  unifolm_no_structural_compress.md
results/v1-baseline/: README.md  manifest.json
results/v2-multithread-zstd/: README.md
results/v3-numa-bind0/: README.md
results/v3-numa-interleave/: README.md
results/v4-bufwriter/: README.md
scripts/: analyze_llama.sh  analyze_small.sh  compress_all.sh  inspect_all.sh  inspect_on_disk.sh  make_llama_gpu_subsets.sh  manifest_llama.json  manifest_small.json  queue_sc4_baselines.sh  run_ablation.sh  scalability.sh  scalability_compress.sh  scalability_gpus.sh
src/: event.rs  lib.rs  main.rs  node.rs  slp.rs  storage_breakdown.rs  synthetic.rs  trace.rs  trace_stream.rs  tree_stats.rs  utils.rs  verify.rs
src/analysis/: compute_comm_overlap.rs  mod.rs  (+6 more)
tests/: end_to_end.rs
(+20 files in other folders)
