[package]
name = "padoc"
version = "0.1.0"
edition = "2021"
description = "Template-based AI profiler trace compression with in-situ analysis"
license = "Apache-2.0"
authors = ["PerFlow-AI authors"]
repository = "https://github.com/yuyangJin/padoc-rs"
readme = "README.md"

[lib]
name = "padoc"
path = "src/lib.rs"

[[bin]]
name = "padoc"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.13"
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }
flate2 = "1.0"
zstd = { version = "0.13", features = ["zstdmt"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap = { version = "2.7", features = ["serde"] }
ahash = { version = "0.8", features = ["serde"] }
regex = "1.11"
rayon = "1.10"
walkdir = "2.5"
once_cell = "1.20"
smallvec = { version = "1.13", features = ["serde"] }
memmap2 = "0.9"
humansize = "2.1"
csv = "1.3"
libc = "0.2"

[dev-dependencies]
tempfile = "3.13"
pretty_assertions = "1.4"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
